[metadata]
name = networking-afc
author = OpenStack
author-email = openstack-dev@lists.openstack.org

[files]
packages = networking_afc

[global]
setup-hooks = pbr.hooks.setup_hook

#[entry_points]
#neutron.db.alembic_migrations =
#    networking-ovn = networking_ovn.db.migration:alembic_migrations
